@@ -536,6 +536,11 @@ static scmp_filter_ctx make_seccomp_filter (int permissive)
 		SC_ALLOW ("setsockopt");
 		SC_ALLOW_ARG_1 ("socket", SCMP_A0 (SCMP_CMP_EQ, AF_UNIX));
 	}
+	/* ESET sends messages to a System V message queue. */
+	if (search_ld_preload ("libesets_pac.so")) {
+		SC_ALLOW_ARG_1 ("msgget", SCMP_A1 (SCMP_CMP_EQ, 0));
+		SC_ALLOW ("msgsnd");
+	}
 
 	return ctx;
 }
