@@ -28,6 +28,9 @@ Major changes since man-db 2.8.3:
 	  Astrill VPN seems to require something similar, and there are
 	  doubtless other such preload hacks.
 
+	* Some versions of ESET File Security call msgget and msgsnd; if
+	  this program is in use, then allow those.
+
 man-db 2.8.3 (5 April 2018)
 ===========================
 
